# geometrical-cpp

./: CMakeLists.txt  README.md
data/: polygon_points.xyz
examples/: perpendicular_path.cpp  test_cgal.cpp
include/: definitions.h  maps.h
src/: maps.cpp
